# __2026_07_03_python_ai_tvdi__

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/07_09/: practice1.ipynb
backend/07_17/: practice1.ipynb  practice2.ipynb
backend/07_20/: Untitled.ipynb  practice1.ipynb  practice1.py  practice2.py  practice3.ipynb  source.py
backend/07_21/: gradio_stock_app.py  practice1.py  practice2.py  practice3.ipynb  practice4.py  pyproject.toml
backend/07_21/tools/: __init__.py  source.py
backend/07_24/: practice1.py  practice2.py  practice3.py
backend/iris-predict-service/: README.md  app.py  iris_model.joblib  requirements.txt
link/: README.md
test/: README.md  app.py  iris_model.joblib  lesson1.ipynb  practice1.ipynb  practice1.py  practice2.ipynb  practice2.py
test1/: README.md  app.py  requirements.txt  train_save.py
test2/: README.md  app.py
test3/: demo1.py  demo2.py  iris_model.joblib  train_save.py
