[project]
name = "2026-07-03-python-ai-tvdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
