[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "07_21"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "mglearn>=0.2.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "uvicorn>=0.51.0",
    "wget>=3.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
[tool.fastapi]
entrypoint = "practice2:app"
